# UCL_LIU

./: .gitignore  README.md  custom_dict_window.py  metadata.txt  myi18n.py  php.py  uclliu.pyw  uclliu.spec
python3/: uclliu_tk.pyw
rust/: .gitignore  ACCUMULATED_TEXT_MODE.md  CROSS_PLATFORM.md  Cargo.toml  GAME_INPUT_COMPATIBILITY.md  GUI_OPTIONS.md  README.md  TEST_RESULTS.md  WINDOWS_COMPATIBILITY.md  build.bat  run.bat
rust/src/: config.rs  dictionary.rs  game_input_test.rs  gui_window.rs  input_method.rs  input_simulator.rs  keyboard_hook.rs  main.rs  tray.rs
